@startuml

' ==========================================================
'  Sistema de Gestión de Impresoras 3D – FABLAB
'  Proyecto POO – Solicitud y uso de impresoras CR-10
'
'  Clases principales:
'    - Impresora3D
'    - SolicitudImpresion
'    - SistemaImpresoras3D
' ==========================================================


' ----------------------------------------------------------
' Datos de ejemplo (comentados)
' ----------------------------------------------------------

' - Impresora3D: id, codigo, nombre, estado
'   => 1, "4020", "CR-10 #1", "DISPONIBLE"
'   => 2, "4021", "CR-10 #2", "DISPONIBLE"
'   => 3, "4022", "CR-10 #3", "EN_USO"
'   => 4, "4023", "CR-10 #4", "EN_USO"
'
'   estado:
'     "DISPONIBLE"
'     "EN_USO"
'
' - SolicitudImpresion:
'      id, codigo_estudiante, nombre_estudiante,
'      facultad, impresora_id,
'      fecha_impresion, duracion_minutos,
'      material_gramos, estado, motivo_rechazo
'
'   facultad (número):
'     1 = Ingeniería Mecatrónica
'     2 = Ingeniería de Energías Renovables
'     3 = Ingeniería Industrial
'
'   estado:
'     "PENDIENTE"
'     "EN_CURSO"
'     "FINALIZADA"
'     "RECHAZADA"
'
'   Ejemplos:
'   => 1, "1905001001", "Alex Ramírez",
'        1, 1, "10/06/2025", 120, 80, "FINALIZADA", null
'   => 3, "1905001003", "Diego Martínez",
'        2, 3, "20/06/2025", 180, 120, "EN_CURSO", null
'   => 5, "1905001005", "Luis Herrera",
'        1, 1, "25/06/2025", 120, 90, "PENDIENTE", null
'
' Reglas importantes:
'   - Toda solicitud empieza en estado "PENDIENTE".
'   - Solo un administrador (menú admin) la puede aprobar/rechazar.
'   - Al aprobar, pasa a "EN_CURSO" y la impresora queda "EN_USO".
'   - Una impresora no puede tener dos impresiones el mismo día.
'   - Al finalizar la impresión, la solicitud pasa a "FINALIZADA"
'     y la impresora vuelve a "DISPONIBLE".


' ----------------------------------------------------------
' Definición de clases (modelo de datos)
' ----------------------------------------------------------

class Impresora3D {
    +id: int
    +codigo: string          ' Ej: "4020"
    +nombre: string          ' Ej: "CR-10 #1"
    +estado: string          ' "DISPONIBLE" o "EN_USO"
}

class SolicitudImpresion {
    +id: int
    +codigo_estudiante: string
    +nombre_estudiante: string
    +facultad: int           ' 1 = Mecatrónica, 2 = Renovables, 3 = Industrial
    +impresora_id: int
    +fecha_impresion: string ' "dd/mm/aaaa"
    +duracion_minutos: int   ' duración estimada
    +material_gramos: int    ' uso de PLA en gramos
    +estado: string          ' "PENDIENTE", "EN_CURSO", etc.
    +motivo_rechazo: string
}

class SistemaImpresoras3D {
    -impresoras: List<Impresora3D>
    -solicitudes: List<SolicitudImpresion>
    -_siguiente_id: int
    +crear_solicitud(...)
    +obtener_historial_impresora(impresora_id: int)
    +obtener_solicitudes_pendientes()
    +aprobar_solicitud(solicitud_id: int)
    +rechazar_solicitud(solicitud_id: int, motivo: string)
    +finalizar_impresion(solicitud_id: int)
    +obtener_estado_impresora(impresora_id: int)
}


' ----------------------------------------------------------
' Relaciones entre clases
' ----------------------------------------------------------

' Una impresora puede tener muchas solicitudes de impresión
Impresora3D "1" -- "0..*" SolicitudImpresion : recibe >

' El sistema gestiona varias impresoras
SistemaImpresoras3D "1" -- "0..*" Impresora3D : contiene >

' El sistema también gestiona las solicitudes
SistemaImpresoras3D "1" -- "0..*" SolicitudImpresion : administra >

@enduml
